--- a/pages/zhuce.html
+++ b/pages/zhuce.html
@@ -52,7 +52,7 @@
 					<!-- end register-header -->
 					<!-- begin register-content -->
 					<div class="register-content">
-						<form action="index.html" method="GET" class="margin-bottom-0">
+						<form action="../index.html" method="GET" class="margin-bottom-0">
 							<label class="control-label">账号 <span class="text-danger">*</span></label>
 							<div class="input-group mb-3">
 								<input type="text" class="form-control" placeholder="请输入手机号" aria-label="Recipient's username" aria-describedby="basic-addon2">
