--- a/pages/denglu.html
+++ b/pages/denglu.html
@@ -57,7 +57,7 @@
 					<!-- end login-header -->
 					<!-- begin login-content -->
 					<div class="login-content">
-						<form action="index.html" method="GET" class="margin-bottom-0">
+						<form action="../index.html" method="GET" class="margin-bottom-0">
 							<div class="form-group m-b-15">
 								<input type="text" class="form-control form-control-lg" placeholder="账号" required />
 							</div>
