--- a/pages/denglu.html
+++ b/pages/denglu.html
@@ -71,7 +71,7 @@
 								</label>
 							</div>
 							<div class="login-buttons">
-								<a href="home.html" style="color:#fff"><button type="submit" class="btn btn-success btn-block btn-lg">登录</button></a>
+						<button type="submit" class="btn btn-success btn-block btn-lg" onclick="window.parent.location.href='home.html'" style="color:#fff">登录</button>
 							</div>
 							<div class="m-t-20 m-b-40 p-b-40 text-inverse">
 								还不是会员? 点击 <a href="zhuce.html" class="text-info">这里</a> 注册
