--- a/pages/home.html
+++ b/pages/home.html
@@ -232,7 +232,7 @@
 		<!-- 标签页end -->
 
 		<span id="return-top" class="text-center" style="position:fixed;bottom:10%;right:10%;color:#fff;border:1px solid #ccc;width:48px">
-			<a href="#"><i class='iconfont icon-huidaodingbu-copy'style="font-size:30px;color:#ccc"></i></a>
+			<a href="#"><i class='iconfont icon-huidaodingbu-copy'style="font-size:30px;color:#666"></i></a>
 		</span>
 
 		<!-- 页脚start -->
